/cp 2008-06-08  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/35242
        * pt.c (maybe_process_partial_specialization): Check the tree
	returned by push_template_decl for error_mark_node.
	* parser.c (cp_parser_class_head): Likewise, check the tree
	returned by the latter. 

/testsuite
2008-06-08  Paolo Carlini  <paolo.carlini@oracle.com>

        PR c++/35242
        * g++.dg/cpp0x/vt-35242.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@136569 138bc75d-0d04-0410-961f-82ee72b054a4